                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 23-08-2004 updated: Spanish string.xml (thnx ezar2003)
  - 23-08-2004 added: mplayer.dll version info to SystemInfo screen when available.
  - 23-08-2004 fixed: Custom thumbnails will always be used if the thumbnail is on the Xbox.
  - 23-08-2004 changed: A bit or reorganization and formatting changes for My Programs.
  - 22-08-2004 fixed: thumb aspectratio in videoinfo screen 
  - 22-08-2004 changed: New render code for video output (faster, less memory).
  - 21-08-2004 fixed: location of dialog windows did not scale correctly to other resolutions.
  - 21-08-2004 fixed: Volume control using digital buttons (such as the remote).
  - 21-08-2004 added: Failsafe patch from SF (Thanks Guybrush)
  - 21-08-2004 added: <align> tag works for buttons now.
  - 21-08-2004 added: Popup subpanel to homepage.
  - 21-08-2004 fixed: codecs.conf: DTS tracks wouldn't decode properly if DTS was not enabled.
  - 21-08-2004 added: Two bugs to bugs.txt
  - 21-08-2004 added:    Hebrew xpr fonts
  - 21-08-2004 changed:  Flip BiDi Charset has moved from XboxMediaCenter.xml to the GUI
  - 21-08-2004 added:  Support for multiple font sets in a skin, switched from the GUI
  - 21-08-2004 added:  Hebrew language file by okets
  - 20-08-2004 fixed:  Possible font related crashes.
  - 20-08-2004 changed: Used new seeking for better accuracy for .cue files.
  - 20-08-2004 fixed:   Album view - some albums weren't treated as folders.
  - 20-08-2004 changed: Passthrough of AC3/DTS is always used unless samplerate != 48kHz
                        or Output to all channels is enabled, and the source is stereo.